@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2023-12-18T08:09:44Z",
+  "timestamp" : "2023-12-25T08:09:04Z",
   "count_outdated" : 469,
   "uniques_outdated" : 299,
-  "count" : 470,
-  "uniques" : 300,
+  "count" : 471,
+  "uniques" : 301,
   "clones" : [
     {
       "timestamp": "2023-12-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-12-25T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
